# aura

./: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_ASSESSMENT.md  README.md  alembic.ini  problem.txt  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: required-checks.mdc
.github/workflows/: ci.yml
app/: __init__.py  index.py  main.py
app/application/: __init__.py  analytics_etl.py  auth_service.py  calibration_analytics.py  notification_service.py  objective_validation.py  scheduled_jobs.py  summary.py
app/core/: __init__.py  audit.py  auth.py  config.py  exception_handlers.py  jwt.py  lifespan.py  password.py
app/domain/: __init__.py  exceptions.py  objective.py  permissions.py  protocols.py  review_session.py  scoring.py  smart_validation.py
app/infrastructure/: __init__.py
app/pages/: __init__.py  landing.py
app/schemas/: audit_log.py  baseline_snapshot.py  behavioral_indicator.py  department.py  (+24 more)
mimi/: .cta.json  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_baseline_snapshots_db.py  test_calibration_analytics_db.py  test_calibration_sessions_db.py  test_dim_cycle_db.py  test_fact_performance_summary_db.py  test_health.py  test_notification_logs_db.py  test_notification_rules_db.py  test_objective_templates_versioning_db.py  test_objective_versions_db.py  test_permissions_db.py  test_reward_policies_db.py  test_role_permissions_db.py  test_scoring.py  test_shared_utils.py  test_smart_validation.py  test_smart_validation_db.py
(+232 files in other folders)
